fixed horizontal width on narrow screens

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,7 +9,7 @@ h4, h5, h6 {
 
 h3 > small {
     font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-    color: #2f2f2f;
+    /*color: #2f2f2f;*/
     letter-spacing: 0;
 }
 
@@ -27,10 +27,6 @@ main > header
     height: auto;
 }
 
-.navbar-brand > a
-{
-    margin-right: 1em;
-}
 
 body>main .jumbotron {
     border-radius: 0;
